# transient-heat-transfer-analysis-model

./: .gitignore  README.md  build.gradle  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.gradle
model/: .description  _this.yaml  thermocouple-measurement-of-gas-stream-model.yaml
model/equations/: _this.yaml
model/equations/biList/: _this.yaml
model/equations/biotNumber/: _this.yaml
model/equations/c1List/: _this.yaml
model/equations/lumpedCapacitanceMethod/: _this.yaml
model/equations/theta0/: _this.yaml
model/examples/: _this.yaml
model/examples/lumped-capacitance-analysis/: thermocouple-measurement-of-gas-stream-model.yaml
model/examples/lumped-capacitance-method/: thermocouple-measurement-of-gas-stream-model.yaml
model/examples/one-term-approximation/: plane-wall-with-convection-model.yaml
model/examples/planeWallWithConvectionUsingOneTermApproximation/: _this.yaml  analysis.yaml  assumptions.txt  assumptions.yaml  biotNumber  comments.txt  comments.yaml  fourierNumber  parameters.yaml  problemStatement.txt  references.yaml  schematic.txt
model/examples/semi-infinite-solid/: soil-with-constant-surface-temperature-model.yaml
model/schema/: computational-analysis-schema.yaml  transient-conductive-heat-transfer-schema.yaml
views/: .description  README.md.njk  analysis_report.md.njk  run_analysis.py.njk
views/lumped-capacitance-analysis/: thermocouple-measurement-of-gas-stream.py  thermocouple-measurement-of-gas-stream.py.njk
views/queries/: .description  preprocess_model.py.njk  run_analysis.py.njk
(+78 files in other folders)
