[project]
name = "transient-conduction-model"
version = "0.0.0"
description = "Demo m30ml project for conducting a transient heat transfer analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "linkml>=1.10.0",
    "pint>=0.24.4",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "sympy>=1.14.0",
]
